deploy/k8s/backend-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ui
  labels:
    app: backend-ui
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: backend-ui
  template:
    metadata:
      labels:
        app: backend-ui
    spec:
      serviceAccountName: endpoints-finder
      containers:
      - name: backend-ui
        image: ryanpower/backendui:0.0.22
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
        - name: timezone
          mountPath: /etc/localtime
      volumes:
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai

---

apiVersion: v1
kind: Service
metadata:
  name: backend-ui-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30200
    name: http
    protocol: TCP
  selector:
    app: backend-ui
