deploy/k8s/core-rpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-rpc
  labels:
    app: core-rpc
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: core-rpc
  template:
    metadata:
      labels:
        app: core-rpc
    spec:
      serviceAccountName: endpoints-finder
      containers:
      - name: core-rpc
        image: ryanpower/core-rpc:0.0.24
        ports:
        - containerPort: 9101
        readinessProbe:
          tcpSocket:
            port: 9101
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 9101
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
          - name: timezone
            mountPath: /etc/localtime
          - mountPath: /home/data
            name: simple-admin-pv
      volumes:
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: simple-admin-pv
          persistentVolumeClaim:
            claimName: simple-admin-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  name: core-rpc-svc
  labels:
    app: core-rpc-svc
spec:
  ports:
  - port: 9101
    name: rpc
    targetPort: 9101
  - port: 4001
    name: prometheus
    targetPort: 4001
  selector:
    app: core-rpc
