deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: simple-admin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backendui-svc
                port:
                  number: 80
    - host: simple-admin.com
      http:
        paths:
          - path: /sys-api/
            pathType: Prefix
            backend:
              service:
                name: coreapi-svc
                port:
                  number: 9100
